ASC - fix aws region environment variable